--- a/css/magnific.css
+++ b/css/magnific.css
@@ -45,7 +45,7 @@
 .mfp-content {
   position: relative;
   display: inline-block;
-  vertical-align: middle;
+  /*vertical-align: middle;*/
   margin: 0 auto;
   text-align: left;
   z-index: 1045; }
@@ -217,8 +217,8 @@ button::-moz-focus-inner {
   padding-bottom: 40px; }
   .mfp-iframe-holder .mfp-content {
     line-height: 0;
-    width: 100%;
-    max-width: 900px; }
+    width: 50%;   /*new*/
+    max-width: 500px; }
   .mfp-iframe-holder .mfp-close {
     top: -40px; }
 
@@ -233,7 +233,7 @@ button::-moz-focus-inner {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    /*height: 100%;*/
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
     background: black; }
 
